CMRARC-292 - made url calls have a timeout, fixed spacing.

--- a/app/assets/stylesheets/pages/_charts.scss
+++ b/app/assets/stylesheets/pages/_charts.scss
@@ -429,3 +429,11 @@
   margin-bottom: 20px;
 }
 
+.report_comment {
+  white-space: pre-wrap;
+}
+
+.recommendation_comment {
+  white-space: pre-wrap;
+}
+
